name:                reflex-prof-flamegraph
version:             0.2.0.0
synopsis:            Generates flamegraphs from Reflex .rfprof files (see Reflex.Profiled).
license:             MIT
license-file:        LICENSE
author:              Francesco Mazzoli
maintainer:          francesco@fpcomplete.com
copyright:           (c) 2015 FP Complete Corporation
category:            Testing
build-type:          Simple
cabal-version:       >=1.10
description:
  This is a small tool to convert Reflex event profiling reports into a format
  understandable by the
  FlameGraph (<https://github.com/brendangregg/FlameGraph>) tool.

data-files:
  FlameGraph/flamegraph.pl

source-repository head
  type:     git
  location: https://github.com/amhuppert/reflex-prof-flamegraph

executable reflex-prof-flamegraph
  main-is:             ghc-prof-flamegraph.hs
  build-depends:       base >=4.6 && <5
                     , filepath
                     , optparse-applicative
                     , process
  other-modules:       ProfFile
                     , Paths_ghc_prof_flamegraph
  default-language:    Haskell2010
  ghc-options:         -Wall